--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,8 +2,8 @@ name: Validate
 
 on:
   push:
-    branches:
-      - master
+    # branches:
+    #   - master
   pull_request:
     branches:
       - master
@@ -21,6 +21,7 @@ jobs:
           "3.9",
           "3.10",
           "3.11",
+          "3.12",
           "pypy-2.7",
           "pypy-3.8",
         ]
@@ -45,9 +46,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }} on ${{ matrix.os }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          allow-prereleases: true
       - name: Install dependencies
         run: python -m pip install -U tox six
       - name: Install zic (Windows)
@@ -116,7 +118,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       - name: Install tox
